# roscopter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_node.sh  package.xml
cfg/: Controller.cfg
doc/: ekf.tex
include/controller/: controller.h
include/ekf/: ekf.h
include/lib/: eigen.h
include/mekf/: mekf.h
include/mocap_filter/: message.h  mocap_filter.h
include/mono_vo/: mono_vo.h
include/rc_joy/: rc_joy.h
launch/: opt_flow_test.launch  simple.launch  test.launch
matlab_tuning/: analyze.m  attitude_test.m  plot_estimates.m  processAllTopics.m  processTopics.m
matlab_tuning/navfn/: quaternionMultiplication.m  rollPitchYawFromQuaternion.m  rotationMatrixFromQuaternion.m
msg/: FilterState.msg
params/: estimator.yaml  mekf.yaml  mikey.yaml  naze.yaml  waypoints.csv  waypoints.yaml
roscopter/: CMakeLists.txt  package.xml
roscopter/cfg/: Controller.cfg
roscopter/include/: logger.h
roscopter/include/controller/: controller.h  simple_pid.h
roscopter/include/ekf/: ekf.h  ekf_ros.h  ekf_rosbag.h  meas.h  state.h  wgs84.h
roscopter/include/mekf/: mekf.h  mekf_math.h
roscopter/include/roscopter/: eigen_helpers.h
roscopter/include/trajectory_tracker/: trajectory_tracker.h
roscopter/launch/: bag_gps.launch  copter_bag.launch  copter_gps.launch  copter_mocap.launch  copter_mocap_fs.launch  copter_rtk.launch  copter_sil.launch  copter_ublox.launch  follow_car.launch  gps.launch  landing_mocap.launch  mocap.launch  mocap2ublox.launch  mocap_waypoint.launch
roscopter/matlab/: plot_ekf_log.m  read_line.m
roscopter/params/: .tchalla.yaml.swo  F450.yaml  ekf.yaml  ekf_drone.yaml  ekf_gains.yaml  groot.yaml  mekf.yaml  mocap2ublox.yaml  multirotor.yaml  performance_tracker.yaml  planck.yaml  planck_450.yaml  quadcopter.yaml  ragnarok.yaml  tchalla.yaml  waypoints.yaml  waypoints_small.yaml
roscopter/params/sub_params/: controller.yaml  ekf.yaml  rosflight_default_parameters.yml
roscopter/scripts/: commands_plotter.py  ekf_data.py  mocap2ublox.py  mocap2ublox2.py  mocap2ublox_ros.py  plotWindow.py  plot_ekf.py  plot_window.py  states_plotter.py
roscopter/scripts/performance_tracker/: performance.py  performance_ros.py
roscopter/scripts/performance_tracker/tests/: ros_wrapper_test.py  tests.py
roscopter/src/car_follower/: car_follower.py
roscopter/src/controller/: command_converter.py  controller.cpp  simple_pid.cpp
roscopter/src/ekf/: dynamics.cpp  ekf.cpp  ekf_dyn.cpp  ekf_helper.cpp  ekf_log.cpp  ekf_meas.cpp  ekf_node.cpp  ekf_ros.cpp  ekf_rosbag.cpp  log.cpp  meas.cpp  state.cpp
roscopter/src/lqr/: lqr_controller.py  lqr_controller_node.py  visualize_commands.py  visualize_desired_states.py
roscopter/src/mekf/: mekf.cpp  mekf_node.cpp
roscopter/src/trajectory_manager/: trajectory_manager.py
roscopter/src/trajectory_tracker/: test_trajectory_tracker.py  trajectory_tracker.py  trajectory_tracker_node.cpp  trajectory_tracker_node.py  trajectory_tracker_old.py  visualize_trajectory_tracker.py
roscopter/src/waypoint_manager/: failsafe_manager.py  landing_error.py  landing_manager.py  platform_manager.py  velocity_commander.py  velocity_manager.py  waypoint_manager.py
roscopter/srv/: AddWaypoint.srv  RemoveWaypoint.srv
roscopter_common/: CMakeLists.txt  package.xml
roscopter_common/include/roscopter_common/: common.h
roscopter_common/src/: common.cpp
roscopter_msgs/: CMakeLists.txt  package.xml
roscopter_msgs/msg/: Command.msg  Control_Performance.msg  Failsafe.msg  PoseEuler.msg  RelativePose.msg  TrajectoryCommand.msg  TrajectoryState.msg  Waypoint.msg
roscopter_msgs/srv/: AddWaypoint.srv  ClearWaypoints.srv  Fly.srv  Hold.srv  Land.srv  ListWaypoints.srv  Release.srv  RemoveWaypoint.srv  ReturnToBase.srv  SetWaypointsFromFile.srv
roscopter_pkgs/: CMakeLists.txt  package.xml
roscopter_sim/: CMakeLists.txt  package.xml
roscopter_sim/include/roscopter_sim/: common.h  gz_compat.h  multirotor_forces_and_moments.h
roscopter_sim/launch/: gazebo.launch  gazebo_lqr.launch  gazebo_roscopter_sim.launch  gazebo_rosflight_sim.launch  gazebo_trajectory_tracker.launch  holodeck.launch  landing.launch  mocap.launch  mocap2ublox.launch  mocap_landing.launch  moving_waypoint.launch  multirotor.launch  multirotor_sil.launch  rtk_boatLanding.launch  rtk_under_way.launch  spawn_mav.launch  spawn_target.launch  tune.launch
roscopter_sim/launch/sub_launch/: spawn_mav_gazebo.launch  spawn_mav_holodeck.launch
roscopter_sim/params/: ekf.yaml  holodeck_world.yaml  multirotor.yaml  multirotor_gazebo.yaml  multirotor_gazebo_rosflight_sim.yaml  multirotor_sil.yaml  platform.yaml  ragnarok.yaml
roscopter_sim/params/gazebo/: multirotor_gazebo_roscopter_sim.yaml
roscopter_sim/params/holodeck/: holodeck_world.yaml  multirotor_holodeck.yaml
roscopter_sim/params/node_params/: gazebo_properties.yaml  roscopter_sim.yaml  rosflight_plugins.yaml  rosflight_sim.yaml
roscopter_sim/scripts/: mocap_sim_ros.py  sim_ros.py
roscopter_sim/src/: multirotor_forces_and_moments.cpp
roscopter_sim/xacro/: multirotor.urdf.xacro  multirotor_forces_and_moments.xacro  multirotor_sil.urdf.xacro  platform.urdf.xacro  roscopter_sim.urdf.xacro  rosflight_sim.urdf.xacro
roscopter_utils/: CMakeLists.txt  package.xml
roscopter_utils/include/roscopter_utils/: gnss.h  input_parser.h  logger.h  progress_bar.h  yaml.h
roscopter_utils/lib/geometry/: .gitignore  .travis.yml  CMakeLists.txt  README.md  geometry-config.cmake
roscopter_utils/lib/geometry/cmake/: geometryConfig.cmake.in
roscopter_utils/lib/geometry/include/geometry/: cam.h  quat.h  support.h  xform.h
roscopter_utils/lib/geometry/src/: test.cpp
roscopter_utils/src/: vimfly
scripts/: commands_plotter.py  states_plotter.py
src/: ekf.cpp  ekf_node.cpp  mocap_filter.cpp  mocap_filter_node.cpp  rc_joy.cpp
src/controller/: controller.cpp  controller_node.cpp
src/ekf/: ekf.cpp
src/joy/: rc_joy.cpp
src/lib/: eigen.cpp
src/mekf/: mekf.cpp  mekf.tex  mekf_math.cpp  mekf_math.py  mekf_node.cpp
src/mono_vo/: mono_vo.cpp  mono_vo_node.cpp  (+1 more)
srv/: SetWaypointsFromFile.srv
(+3 files in other folders)
