<?xml version="1.0"?>
<package>
  <name>ros_copter</name>
  <version>0.0.0</version>
  <description>The ros_copter package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>fcu_common</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cv3_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>fcu_common</run_depend>
  <run_depend>cv3_bridge</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>message_runtime</run_depend>



  <export>

  </export>
</package>

