<?xml version="1.0"?>
<package format="3">
  <name>roscopter</name>
  <version>0.0.0</version>
  <description>The roscopter package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>


  <!-- =========================================== -->
  <!-- this block has not been made ros2 compliant -->

  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosflight_utils</depend>
  <depend>eigen_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roslib</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- =========================================== -->

  <export>

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>

  </export>
</package>
