<?xml version="1.0"?>
<package format="3">
  <name>roscopter_msgs</name>
  <version>0.0.0</version>
  <description>Message, service, and action definitions for the ROScopter package</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/byu-magicc/roscopter</url>
  <url type="bugtracker">https://github.com/byu-magicc/roscopter/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- =========================================== -->
  <!-- this block has not been made ros2 compliant -->

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- =========================================== -->

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
