<?xml version="1.0"?>
<package format="2">
  <name>roscopter_pkgs</name>
  <version>0.1.3</version>
  <description>A fully-featured multirotor autopilot for ROS, based on Dr. Beard's Quadrotor Notes.</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="repository">https://github.com/byu-magicc/roscopter</url>
  <url type="bugtracker">https://github.com/byu-magicc/roscopter/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
