<?xml version="1.0"?>
<package format="3">
  <name>roscopter_sim</name>
  <version>2.0.1</version>
  <description>The roscopter_sim package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author>James Jackson</author>
  <author>Gary Ellingson</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- =========================================== -->
  <!-- this block has not been made ros2 compliant -->

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo</build_depend>

  <!-- Dependencies needed to compile and for after this package is compiled -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosflight_utils</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- =========================================== -->

  <export>

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>

  </export>
</package>
